objects/UnitBody__c.object
<CustomObject>
    <fields>
        <fullName>AcceptanceDateFormula__c</fullName>
        <formula>Datevalue(AcceptanceDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>検収日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcceptanceDate__c</fullName>
        <label>検収日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_X9__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>納入先取引先(9桁)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.NineDigitAccountDisplay__c</field>
                <operation>contains</operation>
                <value>★</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>本体号機 (納入先取引先(9桁))</relationshipLabel>
        <relationshipName>AccountagKg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact1Affiliation__c</fullName>
        <formula>Contact1__r.Affiliation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>窓口：１　所属</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>窓口：１</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>本体号機 (窓口：１)</relationshipLabel>
        <relationshipName>Contact1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact2Affiliation__c</fullName>
        <formula>Contact2__r.Affiliation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>窓口：２　所属</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>窓口：２</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>本体号機 (窓口：２)</relationshipLabel>
        <relationshipName>Contact2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliveryAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>納入先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>本体号機 (納入先取引先)</relationshipLabel>
        <relationshipName>DeliveryAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delta_v5_Unit__c</fullName>
        <label>Delta_v5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFEndDateFormula__c</fullName>
        <formula>Datevalue(EFEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EF終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EFEndDate__c</fullName>
        <label>EF終了日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EFExtensionReason__c</fullName>
        <label>EF延長理由</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFProductNo__c</fullName>
        <label>EF製番</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>if (YEAR(TODAY()) - YEAR ( AcceptanceDateFormula__c )  &lt; 6,&quot;00-05&quot;
,if (YEAR(TODAY()) - YEAR ( AcceptanceDateFormula__c )  &lt; 11,&quot;06-10&quot;
,if (YEAR(TODAY()) - YEAR ( AcceptanceDateFormula__c )  &lt; 16,&quot;11-15&quot;
,if (YEAR(TODAY()) - YEAR ( AcceptanceDateFormula__c )  &lt; 21,&quot;16-20&quot;
,if (YEAR(TODAY()) - YEAR ( AcceptanceDateFormula__c )  &gt; 20,&quot;21-&quot;
,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>経過年数</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemLink__c</fullName>
        <label>品目</label>
        <referenceTo>ProductItem__c</referenceTo>
        <relationshipLabel>本体号機</relationshipLabel>
        <relationshipName>ItemLink</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ItemName__c</fullName>
        <formula>ItemLink__r.JapaneseName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>品目名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>品目</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaseExpiryScheduledDateFormula__c</fullName>
        <formula>Datevalue(LeaseExpiryScheduledDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>リース満了予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaseExpiryScheduledDate__c</fullName>
        <label>リース満了予定日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ModelAbbreviation__c</fullName>
        <label>機種略称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelName__c</fullName>
        <formula>ItemLink__r.JapaneseName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>機種名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>ItemLink__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>機種</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_ID__c</fullName>
        <externalId>true</externalId>
        <label>データ移行用ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>リユース</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Royal_Probe_Unit__c</fullName>
        <label>Royal プローブ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesAccountCode__c</fullName>
        <formula>SalesAccount__r.CustomerCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>販売先取引先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>本体号機 (販売先取引先)</relationshipLabel>
        <relationshipName>Sales_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>本体号機</relationshipLabel>
        <relationshipName>SalesOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SerialNo__c</fullName>
        <label>シリアル番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <formula>ItemLink__r.Series__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>系列</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingDateFormula__c</fullName>
        <formula>Datevalue(ShippingDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShippingDate__c</fullName>
        <label>出荷日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SpecialContractNote__c</fullName>
        <label>特別契約メモ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <formula>ItemLink__r.Kikaku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>規格</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusOfUseName__c</fullName>
        <formula>IF(StatusOfUse__c = &quot;1&quot;, &quot;常時使用&quot;, 
IF(StatusOfUse__c = &quot;2&quot;, &quot;使用&quot;,
IF(StatusOfUse__c = &quot;3&quot;, &quot;未使用&quot;,
IF(StatusOfUse__c = &quot;9&quot;, &quot;廃棄&quot;,
IF(StatusOfUse__c = &quot;10&quot;, &quot;適用なし&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>使用状況名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusOfUse__c</fullName>
        <label>使用状況</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SvcCharge__c</fullName>
        <label>SVC担当</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SvcForm__c</fullName>
        <label>SVC形態</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitBodyManageId__c</fullName>
        <description>{品目}+&apos;_&apos;+{シリアル番号}の値を設定</description>
        <externalId>true</externalId>
        <label>本体号機_管理用ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <externalId>true</externalId>
        <label>本体号機</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WasteSituation__c</fullName>
        <label>廃棄状況</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>本体号機</label>
    <listViews>
        <fullName>view_gaibuID</fullName>
        <columns>NAME</columns>
        <columns>UnitBody__c</columns>
        <columns>UnitBodyManageId__c</columns>
        <columns>OLD_ID__c</columns>
        <columns>ItemLink__c</columns>
        <columns>Model__c</columns>
        <columns>SerialNo__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UnitBodyManageId__c</field>
            <operation>equals</operation>
            <value>378038_MS16J0151</value>
        </filters>
        <label>本体号機外部ID</label>
        <language>ja</language>
        <sharedTo>
            <group>IT_Infomation_System_G</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>view_unitbody_all</fullName>
        <columns>NAME</columns>
        <columns>UnitBody__c</columns>
        <columns>UnitBodyManageId__c</columns>
        <columns>OLD_ID__c</columns>
        <columns>ItemLink__c</columns>
        <columns>Model__c</columns>
        <columns>SerialNo__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>NM25</label>
        <language>ja</language>
        <sharedTo>
            <group>IT_Infomation_System_G</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>view_unitbody_non</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>UnitBody__c</columns>
        <columns>UnitBodyManageId__c</columns>
        <columns>OLD_ID__c</columns>
        <columns>ItemLink__c</columns>
        <columns>Model__c</columns>
        <columns>SerialNo__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UnitBody__c</field>
            <operation>startsWith</operation>
            <value>DUMMY</value>
        </filters>
        <filters>
            <field>UnitBody__c</field>
            <operation>equals</operation>
        </filters>
        <label>CA110084-0084</label>
        <language>ja</language>
        <sharedTo>
            <group>IT_Infomation_System_G</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>本体号機</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>